<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="10dp"
    android:background="@color/colorWhite"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="version2.masterchef.com.masterchef.About.AboutMasterChef"
    tools:showIn="@layout/activity_about_master_chef">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                app:cardBackgroundColor="@color/colorDefault"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="2dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/icon"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:layout_margin="10dp"/>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorDefault"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edition"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="5dp"
                        android:layout_weight="1"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorDefault"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="2dp"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/desc"
                        android:typeface="serif"
                        android:textColor="@color/colorWhite"
                        android:textSize="15sp"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingTop="20dp"
                        android:layout_weight="1"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorDefault"
                app:cardElevation="1dp"
                app:cardCornerRadius="10dp"
                android:layout_margin="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/credits"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="3dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pinoyChow"
                        android:typeface="serif"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/colorWhite"
                        android:layout_margin="3dp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </LinearLayout>



</ScrollView>
