<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorDefault">

    <TextView
        android:id="@+id/tvMasterChef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="45sp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvVersion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tvFDE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edition"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:typeface="serif"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="200dp"
                android:layout_height="180dp"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:progressDrawable="@drawable/progressbar"
                android:layout_marginBottom="1dp"
                android:padding="1dp"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:typeface="serif"
        android:text="Loading..."
        android:gravity="center"
        android:textSize="20sp"
        android:layout_weight="1"/>
</LinearLayout>